<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".gastos_indirectos">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- Parte para ingresar datos -->

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="            Costos indirectos"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/btn_limpiar"
                    android:layout_width="118dp"
                    android:layout_height="46dp"
                    android:text="@string/txt_Limpiar_Boton"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.959"
                    app:layout_constraintStart_toEndOf="@+id/btn_Volver2"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />

                <Button
                    android:id="@+id/btn_Volver2"
                    android:layout_width="118dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="@string/txt_Volver_Boton"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="136dp">

                <TextView
                    android:layout_width="114dp"
                    android:layout_height="23dp"
                    android:text="Depreciación"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.173"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.124" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="176dp"
                    android:layout_height="20dp"
                    android:text="Sueldo del emprendedor"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.078"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.62" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="66dp"
                    android:layout_height="22dp"
                    android:text="@string/txt_Anual_String"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.753"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.631" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="118dp"
                    android:layout_height="23dp"
                    android:text="Amortización"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.802"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.118" />

                <TextView
                    android:id="@+id/txt_cantidadAnual_1"
                    android:layout_width="123dp"
                    android:layout_height="21dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.179"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.86" />

                <TextView
                    android:id="@+id/txt_cantidadAnual_3"
                    android:layout_width="123dp"
                    android:layout_height="21dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.8"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.86" />

                <TextView
                    android:id="@+id/txt_cantidadAnual_2"
                    android:layout_width="114dp"
                    android:layout_height="17dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.173"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.355" />

                <TextView
                    android:id="@+id/txt_cantidadAnual_"
                    android:layout_width="115dp"
                    android:layout_height="17dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.806"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.355" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <EditText
                android:id="@+id/txt_Concepto_indirecto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Concepto de costo"
                android:inputType="text" />

            <EditText
                android:id="@+id/txt_Mensual_indirecto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Monto mensual"
                android:inputType="number|numberDecimal" />

            <Button
                android:id="@+id/agregarButton"
                android:layout_width="199dp"
                android:layout_height="wrap_content"
                android:onClick="agregarItem"
                android:text="Agregar" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fillViewport="true">

                    <TableLayout
                        android:id="@+id/tbllayout_amortizacion"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent">

                    </TableLayout>
                </HorizontalScrollView>
            </ScrollView>

        </LinearLayout>

        <!-- Parte para mostrar la tabla -->
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>